# tensorclaw

./: .gitignore  LICENSE  README.md  pyproject.toml
tensorclaw/: __init__.py  agent.py  cli.py  git_ops.py  journal.py  ledger.py  loop.py  memory.py  metrics.py  shell.py  spec.py  telemetry.py  templates.py
tensorclaw/engine/: __init__.py  bootstrap.py  controller.py  events.py  models.py  runner.py
tensorclaw/tui/: __init__.py  app.py  theme.tcss
tensorclaw/tui/widgets/: __init__.py  chat_view.py  iterations_view.py  metrics_view.py  output_view.py  status_bar.py
tests/: test_chat_intent.py  test_controller_plan_flow.py  test_history_loading.py  test_plan_confirmation.py  test_runner_discard_revert.py  test_sparkline.py  test_telemetry_memory.py
