[project]
name = "tensorclaw"
version = "0.1.0"
description = "Interactive harness for codifying autoresearch loops with pi"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Philip Ottesen" }
]
dependencies = [
  "PyYAML>=6.0.1"
]

[project.scripts]
tensorclaw = "tensorclaw.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tensorclaw"]
